Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(08/02/16) - Improvements - Version 1.9.7.8

[!] - Fixed CSS validation errors


----

(07/17/15) - Improvements - Version 1.9.7.7

[+] - Added options to customizer as per wordpress.org guidelines
[+] - Added new plugin suggestion.


----

(02/04/15) - Improvements - Version 1.9.7.5
[+] - Added new plugin suggestion.
[!] - Fix on turkish translation.

(10/05/14) - Improvements - Version 1.9.7.5

[*] Minify all backend scripts and styles
[*] Improve comply to coding standards
[*] Run css through csscomb

----

(09/20/14) - Improvements - Version 1.9.7.4

[+] Added `get_post_type()` to all `get_template_part()` so that CPT can have a differnt template in the child theme.
[*] Improve comply to coding standards
[*] Update Translations

----

(09/06/14) - Improvements - Version 1.9.7.3

[+] Add iFeatured Slider as recommended plugin
[*] Escape variables to improve security
[*] Small code improvements

----

(08/24/14) - Improvements - Version 1.9.7.2

[!] Fix stray p tag in activation notice
[+] Add wrapper for Breadcrumb NavXT
[+] Define content width depending on page template

----

(08/10/14) - Improvements - Version 1.9.7.1

[*] Improve the organisation of the functions
[*] Clean up code
[!] Fix screen reader link
[+] Add filter `responsive_number_footer_widgets` to change when the `fit` class is added in the footer widgets.

----

(07/25/14) - Improvements - Version 1.9.7.0

[!] Improve Responsive Grid
[x] Remove default logo as per WordPress.org guidelines
[*] Update Screenshot

----

(07/18/14) - Improvements - Version 1.9.6.9

[!] Fix very long submenu items
[!] Fix path to ie7-fix.gif
[!] Fix front page error message

----

(07/11/14) - Improvements - Version 1.9.6.8

[*] Add taxonomy description to archive page
[*] Seperate featured area from front page

----

(07/04/14) - Improvements - Version 1.9.6.7

[*] Update cs_CZ translation